bad/assign_field_int_mcall_null.example_compiler_output
ERROR
[1mbad/assign_field_int_mcall_null.lat:10:20: [1;31merror: [0;1massigning to `int` from incompatible type `null`[m
	(new M).foo().fld = null;
	                  [1;32m^[m
